--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="top_20_popular_film">Top 20 фильмов по популярности</string>
     <string name="top_20_popular_serials">Top 20 сериалов по популярности</string>
     <string name="top_20_rating_film">Top 20 фильмов по рейтингу</string>
-    <string name="top_20_сериалов_film">Top 20 сериалов по рейтингу</string>
+    <string name="top_20_rating_serial">Top 20 сериалов по рейтингу</string>
 </resources>
